fix overflow

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -21135,7 +21135,7 @@ html {
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 button,
